# This file defines the build system. These packages are required
# BEFORE the setup.py or requirements.txt files are even read.
# https://www.python.org/dev/peps/pep-0517/
# https://www.python.org/dev/peps/pep-0518/

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]

[tool.setuptools_scm]
write_to = "src/odyssey/version.py"
